--- a/css/style_template.css
+++ b/css/style_template.css
@@ -28,7 +28,7 @@ body {
 /*---------------head pre nav-------------------------*/
 
 
-#slider_header_car{height:200px!important;}
+#slider_header_car{height:200px!important; }
 @media (min-width:1780px){  #slider_header_car{ height:920px!important;}  }
 @media (min-width:1580px) AND (max-width:1780px){  #slider_header_car{ height:820px!important;}  }
 @media (min-width:1480px) AND (max-width:1580px){  #slider_header_car{ height:790px!important;}  }
@@ -77,7 +77,8 @@ body {
 
 .img_logo_head{ width:300px; max-width: 300px; height:90px;}
 .img_logo_head_mobile{ width:150px; display:none;  margin: 25px 0px 0px 0px;}
-@media (max-width: 1024px) {  .img_logo_head_mobile{ display:block;}   }
+.img_logo_head_mobile{ display:block;}
+/*@media (max-width: 1024px) {  .img_logo_head_mobile{ display:block;}   }*/
 .button-collapse{margin-top: 10px;}
 #logo_nav{width:300px;}
 
@@ -88,7 +89,7 @@ body {
 
 #nav_header_1{ background:#fff; box-shadow: none; height:90px; line-height:90px; z-index: 999;}
 #nav_header_1 .nav-wrapper{ background:#fff;}
-#nav_header_1 .nav-wrapper .brand-logo{ width:900px; height:90px; color: #333; min-width:900px; z-index:99;}
+#nav_header_1 .nav-wrapper .brand-logo{ width:750px; height:90px; color: #333; min-width:750px; z-index:99;}
 #nav_header_1 .button-collapse{ color: #333; }
 #nav_desktop_cont a{ color: #333; }
 #nav_desktop_cont li{ width:150px; height:90px; }
@@ -104,26 +105,32 @@ body {
 #cont_destacado_header ul{margin:0;}
 #cont_destacado_header ul li{ margin:0; padding:0;}
 
-.cont_destacado_header_moduloCont{ position:relative; background:#333; margin:1px 1px 0px 0px; box-sizing:border-box; overflow:hidden;}
+.cont_destacado_header_moduloCont{ position:relative; background:#333; overflow:hidden;}
+.cont_destacado_header_moduloCont a{ text-decoration: none; text-transform:none; color:#fff; float:left; display:block;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity1{ width: 100%;  height: 100%;  background:#338f29; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity2{ width: 100%;  height: 100%;  background:#b2b22e; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity3{ width: 100%;  height: 100%;  background:#9536ce; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity4{ width: 100%;  height: 100%;  background:#f4206a; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+
 .cont_destacado_header_moduloCont img{position:relative; width:120%!important;}
 .cont_destacado_header_moduloCont .cont_info_destacado_header{ position: absolute; top: 0; left: 0; margin:20px 30px; height: calc(100% - 40px); width: calc(100% - 60px);}
 .cont_destacado_header_moduloCont .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{ background: #333; display: block; float: left;  padding: 1px 10px;}
 .cont_destacado_header_moduloCont .cont_info_destacado_header p{  display: block; float: left; font-size: 21px; line-height: 25px; font-weight: 500; }
 
 
-@media (min-width:1280px) {  .cont_destacado_header_moduloCont{ height:260px;}  }
+@media (min-width:1280px) {  .cont_destacado_header_moduloCont{ height:260px; transition: height 1s;}  }
 @media (min-width:1024px) AND (max-width:1280px) {
-  .cont_destacado_header_moduloCont{ height:210px;}
+  .cont_destacado_header_moduloCont{ height:210px; transition: height 1s;}
   .cont_destacado_header_moduloCont .cont_info_destacado_header p{ font-size:18px; line-height: 20px; }
 }
-@media (min-width:768px) AND (max-width:1023px) { .cont_destacado_header_moduloCont{ height:180px;} }
-@media (min-width:600px) AND (max-width:799px) {  .cont_destacado_header_moduloCont{ height:200px;} }
+@media (min-width:768px) AND (max-width:1023px) { .cont_destacado_header_moduloCont{ height:180px; transition: height 1s;} }
+@media (min-width:600px) AND (max-width:799px) {  .cont_destacado_header_moduloCont{ height:200px; transition: height 1s;} }
 @media (min-width:480px) AND (max-width:599px) {
-  .cont_destacado_header_moduloCont{ height:150px;}
+  .cont_destacado_header_moduloCont{ height:150px; transition: height 1s;}
   .cont_destacado_header_moduloCont .cont_info_destacado_header p{ font-size: 18px; line-height: 20px; font-weight: 400; width: 100%; height: 64px; overflow: hidden; }
 }
 @media (min-width:320px) AND (max-width:479px) {
-  .cont_destacado_header_moduloCont{ height:120px;}
+  .cont_destacado_header_moduloCont{ height:120px; transition: height 1s;}
   .cont_destacado_header_moduloCont .cont_info_destacado_header p{ font-size: 18px; line-height: 20px; font-weight: 400; width: 100%; height:40px; overflow: hidden; }
 
 }
@@ -150,12 +157,12 @@ body {
 
 #contSection{ width:100%; float:none; margin:50px auto;}
 
-      @media (min-width:1280px) {  #contSection{ width:1280px;}  }
-      @media (min-width:1024px) AND (max-width:1280px) { #contSection{ width:1024px;} }
-      @media (min-width:768px) AND (max-width:1023px) { #contSection{ width:800px;} }
-      @media (min-width:600px) AND (max-width:799px) {  #contSection{ width:570px;}}
-      @media (min-width:480px) AND (max-width:599px) { #contSection{ width:440px;} }
-      @media (min-width:320px) AND (max-width:479px) {  #contSection{ width:300px;}}
+      @media (min-width:1280px) {  #contSection{ width:1280px; transition: width 1s;} }
+      @media (min-width:1024px) AND (max-width:1280px) { #contSection{ width:1024px; transition: width 1s;} }
+      @media (min-width:768px) AND (max-width:1023px) { #contSection{ width:800px; transition: width 1s;} }
+      @media (min-width:600px) AND (max-width:799px) {  #contSection{ width:570px; transition: width 1s;} }
+      @media (min-width:480px) AND (max-width:599px) { #contSection{ width:440px;  transition: width 1s;} }
+      @media (min-width:320px) AND (max-width:479px) {  #contSection{ width:300px; transition: width 1s;} }
 
 
   /*-----------------------------------------*/
@@ -179,28 +186,28 @@ body {
           .contGrandeCat .contInfoGrandeCat .contVidInfo .contVidInfo_icon{width:10px; height:10px; background:#fff; float:right; margin-top:8px;}
           .contGrandeCat .contInfoGrandeCat .contVidInfo p{ width: calc(100% - 10px);}
 
-              @media (min-width:1280px) {  .contGrandeCat{ height:560px;}  }
-              @media (min-width:1024px) AND (max-width:1280px) {.contGrandeCat{ height:455px;} }
-              @media (min-width:768px) AND (max-width:1023px) { .contGrandeCat{ height:360px;} }
+              @media (min-width:1280px) {  .contGrandeCat{ height:560px; transition: height 1s;}  }
+              @media (min-width:1024px) AND (max-width:1280px) {.contGrandeCat{ height:455px; transition: height 1s;} }
+              @media (min-width:768px) AND (max-width:1023px) { .contGrandeCat{ height:360px; transition: height 1s;} }
               @media (min-width:600px) AND (max-width:799px) {
-                .contGrandeCat{ height:200px;}
+                .contGrandeCat{ height:200px; transition: height 1s;}
                 .contGrandeCat .contInfoGrandeCat{  margin:20px; height: calc(100% - 40px); width: calc(100% - 40px);}
                 .contGrandeCat .contInfoGrandeCat h1{ font-size:35px; margin:15px 0px;}
-                .contGrandeCat .contInfoGrandeCat p{ line-height: 20px; font-size: 16px; width: 300px;}
+                .contGrandeCat .contInfoGrandeCat p{ line-height: 20px; font-size: 14px; width: 300px;}
                 .contGrandeCat .contInfoGrandeCat .contVidInfo{ bottom:0px; }
 
               }
               @media (min-width:480px) AND (max-width:599px) {
-                .contGrandeCat{ height:200px;}
+                .contGrandeCat{ height:200px; transition: height 1s;}
                 .contGrandeCat .contInfoGrandeCat{  margin:20px; height: calc(100% - 40px); width: calc(100% - 40px);}
                 .contGrandeCat .contInfoGrandeCat h1{ font-size:30px; margin:10px 0px;}
                 .contGrandeCat .contInfoGrandeCat p{ line-height: 20px; font-size: 16px; width: 380px;}
               }
               @media (min-width:320px) AND (max-width:479px) {
-                .contGrandeCat{ height:100px;}
+                .contGrandeCat{ height:100px; transition: height 1s;}
                 .contGrandeCat .contInfoGrandeCat{  margin:0px 10px; width: calc(100% - 20px);  height:100%; }
                 .contGrandeCat .contInfoGrandeCat h1{ font-size:25px; margin:10px 0px 10px 0px;}
-                .contGrandeCat .contInfoGrandeCat p{ line-height:16px; font-size: 16px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:260px; }
+                .contGrandeCat .contInfoGrandeCat p{ line-height:16px; font-size: 14px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:260px; }
                 .contGrandeCat .contInfoGrandeCat .contVidInfo p{ max-width:230px;}
               }
 
@@ -217,33 +224,33 @@ body {
           .contChicoCat .contInfoChicoCat .contVidInfo .contVidInfo_icon{width:10px; height:10px; background:#fff; float:right;  margin-top: 3px;}
 
 
-                @media (min-width:1280px) {  .contChicoCat{ height:280px;}  }
+                @media (min-width:1280px) {  .contChicoCat{ height:280px; transition: height 1s;}  }
                 @media (min-width:1024px) AND (max-width:1280px) {
-                  .contChicoCat{ height:227.5px;}
+                  .contChicoCat{ height:227.5px; transition: height 1s;}
                   .contChicoCat .contInfoChicoCat h1{ margin: 20px 0px 15px 0px;}
                   .contChicoCat .contInfoChicoCat p{ line-height:18px; font-size:14px; }
                 }
                 @media (min-width:768px) AND (max-width:1023px) {
-                  .contChicoCat{ height:180px; }
+                  .contChicoCat{ height:180px; transition: height 1s; }
                   .contChicoCat .contInfoChicoCat h1{ margin:20px 0px;}
                   .contChicoCat .contInfoChicoCat p{ line-height:18px; font-size:16px; }
                 }
 
                 @media (min-width:600px) AND (max-width:799px) {
-                  .contChicoCat{ height:100px;}
+                  .contChicoCat{ height:100px; transition: height 1s;}
                   .contChicoCat .contInfoChicoCat{ margin: 0px 20px; width: calc(100% - 40px); height: 100%;}
                   .contChicoCat .contInfoChicoCat p{ line-height:16px; font-size:14px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 350px; }
                   .contChicoCat .contInfoChicoCat h1{margin: 10px 0px 10px 0px; font-size: 25px; }
                 }
 
                 @media (min-width:480px) AND (max-width:599px) {
-                  .contChicoCat{ height:100px;}
+                  .contChicoCat{ height:100px; transition: height 1s;}
                   .contChicoCat .contInfoChicoCat{ margin: 0px 20px; width: calc(100% - 40px); height: 100%;}
                   .contChicoCat .contInfoChicoCat p{ line-height:16px; font-size:16px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 410px; }
                   .contChicoCat .contInfoChicoCat h1{margin: 10px 0px 10px 0px; font-size: 25px; }
                 }
                 @media (min-width:320px) AND (max-width:479px) {
-                  .contChicoCat{ height:100px;}
+                  .contChicoCat{ height:100px; transition: height 1s;}
                   .contChicoCat .contInfoChicoCat{ margin: 0px 10px; width: calc(100% - 20px); height: 100%;}
                   .contChicoCat .contInfoChicoCat p{ line-height:16px; font-size:14px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 260px; }
                   .contChicoCat .contInfoChicoCat h1{margin: 10px 0px 10px 0px; font-size: 25px; }
@@ -270,7 +277,9 @@ body {
 
 #contModalAside{ background:#999; margin:0;padding:0; }
     /*--------*/
-    #contAsideUp{width:100%; background:#999; border:1px #000 solid; box-sizing:border-box;}
+    #contAsideUp{width:100%; background:#999; }
+
+
         @media (min-width:1280px) {  #contAsideUp{ height:160px;}  }
         @media (min-width:1024px) AND (max-width:1280px) {#contAsideUp{ height:140px;} }
         @media (min-width:768px) AND (max-width:1023px) { #contAsideUp{ height:120px;} }
@@ -282,7 +291,7 @@ body {
 
 
     #contAsideBotton{width:100%; height:auto; margin: 0; padding: 0; overflow: hidden; position:relative;}
-    .contAsideBotton_fondo_opacity{}
+    #contAsideBotton .contAsideBotton_fondo_opacity{ width: 100%;  height: 100%;  background:#200944; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
     #contAsideBotton img{ position:absolute; top:0; left:0; width:100%; }
     #contAsideBotton .contAsideBotton_info{ width: 100%; height:100%; text-align:center; position:absolute; top:0; left:0;}
     #contAsideBotton .contAsideBotton_info h1{  margin: 160px 0px 20px 0px;  font-size: 60px; font-weight: bold;  letter-spacing: 4px;}
